crates/general/fixtures/invalid/declaration_traps.zt
x : = 5

g ::

f :: 0

h :: n ->
